fix: visibility issue for font on mobile and add favicon attribution along with updated read me file

--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,6 @@
 }
 
 .gameover-dialog {
-
   font-size: 0.9rem;
   position: fixed;
   background-color: darkblue;
@@ -72,18 +71,21 @@
   box-shadow: 0 0 10px 500vw rgba(0, 0, 0, 0.6);
 }
 
+.attribution-link {
+  font-size: 0.7rem;
+  position: absolute;
+  right: 1%;
+}
+
 .new-game {
   padding: 0.5rem;
   background-color: #3d5786;
   color: white;
 }
 
-
-
 /* media queries */
 
 @media (max-width: 600px) {
-
   .game-grid {
     display: grid;
     gap: 2rem;
@@ -94,32 +96,41 @@
   }
 
   .game-rule {
-    font-weight: 600;
     font-size: 0.7rem;
+    font-weight: 600;
   }
-  .gameover-dialog {
-  font-size: 0.8em;
-  position: fixed;
-  background-color: darkblue;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  width: 55%;
-  height: 16%;
-  border: 2px solid black;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  box-shadow: 0 0 10px 500vw rgba(0, 0, 0, 0.6);
-}
 
-.new-game {
-  width: 50%;
-  height: 40%;
-  font-size: 0.5rem;
-  background-color: #3d5786;
-  color: white;
-}
+  .score {
+    font-weight: 800;
+  }
+
+  .gameover-dialog {
+    font-size: 0.8em;
+    position: fixed;
+    background-color: darkblue;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: 55%;
+    height: 16%;
+    border: 2px solid black;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 0 10px 500vw rgba(0, 0, 0, 0.6);
+  }
+
+  .new-game {
+    width: 50%;
+    height: 40%;
+    font-size: 0.5rem;
+    background-color: #3d5786;
+    color: white;
+  }
+
+  .attribution-link {
+    font-size: 0.4rem;
+  }
 }
