--- a/src/index.css
+++ b/src/index.css
@@ -13,13 +13,9 @@
 body {
   background: #6190e8;
   /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right,
-      #a7bfe8,
-      #6190e8);
+  background: -webkit-linear-gradient(to right, #a7bfe8, #6190e8);
   /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right,
-      #a7bfe8,
-      #6190e8);
+  background: linear-gradient(to right, #a7bfe8, #6190e8);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   display: flex;
